<resources>
    <string name="app_name">Pristine Seed Test</string>

    <!--string for modern ui-->
    <string name="login_email_hint">Enter Email</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <!--permissions name-->
    <string name="permission_necessary">Need Permissions</string>
    <string name="storage_permission_is_encessary_to_wrote_event">Please Grant Permission To Upgrade</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Daily_Activity">Daily Activity</string>
    <string name="menu_Daily_Activity_List">Daily Activity List</string>
    <string name="menu_employee_orderbook">Employee Order Books</string>
    <string name="menu_order_book">Order books</string>
    <string name="menu_UpgradeApp">Upgrade App</string>
    <string name="menu_crop_item">Crop Item</string>
    <string name="menu_order_approval">Order Approval</string>
    <string name="menu_order_list">Order List</string>
    <string name="menu_EventCreate">Event Create</string>
    <string name="menu_EventView">Event List</string>
    <string name="menu_EventApprove">Event Approve</string>
    <string name="menu_EventexpanseAdd">Event Expense</string>
    <string name="menu_manualSync">Manual Sync</string>
    <string name="menu_create_travel">Ta/Da Bill Submittion</string>
    <string name="menu_view_travel">View TA/DA List</string>
    <string name="menu_approve_travel">TA/DA Approve</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
